fix (toc block): eye icon overlapping with ToC item text. (#2211)
* Fix eye icon overlaping with ToC item text.

* Change display property from flex to inline block.
* Change display property of parent from inline to block.

* fixed column alignment issues mostly in the editor, fixed long titles breaking when using columns

--- a/src/block/table-of-contents/editor.scss
+++ b/src/block/table-of-contents/editor.scss
@@ -26,10 +26,13 @@
 	}
 
 	.stk-block-table-of-contents__list-item-inner {
-		display: flex;
-		align-items: center;
-		justify-content: flex-start;
-		flex-wrap: nowrap;
+		display: block;
+	}
+
+	.stk-block-table-of-contents__list-item__exclude-button {
+		display: inline-block;
+		height: auto;
+		vertical-align: middle;
 	}
 
 	.stk-block-table-of-contents__list-item__excluded {
@@ -45,14 +48,10 @@
 
 	// For the visibility toggle styles.
 	.stk-block-table-of-contents__link-wrapper {
-		position: relative;
-		padding-right: 52px;
+		display: block;
 	}
+
 	.stk-block-table-of-contents__list-item__exclude-button {
-		position: absolute;
-		top: 50%;
-		transform: translateY(-50%);
-		margin-left: 16px;
 		&:focus {
 			box-shadow: none;
 		}
